--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,29 @@
 name: test
+
 on:
-  workflow_dispatch: 
+  workflow_dispatch:
+
 
 jobs:
-  build_latex:
+  update_tex:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+  
       - name: Compile LaTeX document
-        uses: dante-ev/latex-action@latest
+        uses: xu-cheng/latex-action@v2
         with:
           root_file: test.tex
-          
 
-      # Step 3: Save the generated PDF as an artifact
-      - name: Upload PDF artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: built-pdf
-          path: main.pdf  # Ensure this matches your output PDF name
+      - name: Commit Files
+        run: |
+          rm Resume.pdf
+          mv src.pdf Resume.pdf
+          ls
+          git add Resume.pdf
+          git status
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -m "Updating Resume.pdf"
+          git push
