--- a/.github/workflows/tex-to-pdf.yml
+++ b/.github/workflows/tex-to-pdf.yml
@@ -1,8 +1,8 @@
-name: texgen
+name: LaTeX to PDF
 
 on:
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+
 
 jobs:
   update_tex:
@@ -18,7 +18,9 @@ jobs:
 
       - name: Commit Files
         run: |
+          ls
           rm Resume.pdf
+          ls
           mv src.pdf Resume.pdf
           ls
           git add Resume.pdf
