--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,10 @@ jobs:
 
       - name: Commit Files
         run: |
-          rm test.pdf
+          rm test-out.pdf
           ls
-          git add test.pdf
+          mv test.pdf test-out.pdf
+          git add test-out.pdf
           git status
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
